More FP16Phase cleanup. Leveraging Invoke helper